[tool.poetry]
name = "dnd-roller"
version = "0.1.0"
description = ""
authors = ["Diogo Regateiro"]

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.9.0"
d20 = "^1.1.2"
discord = "^2.3.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
